--- a/inventory.ini
+++ b/inventory.ini
@@ -1,29 +1,33 @@
 [mongodb]
-mongodb.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+mongodb.deeps.sbs 
 
 [catalogue]
-catalogue.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+catalogue.deeps.sbs
 
 [redis]
-redis.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+redis.deeps.sbs 
 
 [cart]
-cart.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+cart.deeps.sbs 
 
 [user]
-user.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+user.deeps.sbs 
 
 [frontend]
-frontend.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+frontend.deeps.sbs 
 
 [mysql]
-mysql.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+mysql.deeps.sbs 
 
 [shipping]
-shipping.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+shipping.deeps.sbs 
 
 [rabbitmq]
-rabbitmq.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+rabbitmq.deeps.sbs
 
 [payment]
-payment.deeps.sbs ansible_user=ec2-user ansible_password=DevOps321
+payment.deeps.sbs 
+
+[all:vars]
+ansible_user=ec2-user 
+ansible_password=DevOps321
