--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -42,9 +42,11 @@
       state: absent
   
   - name: copy roboshop nginx conf
-    ansible.builtin.copy:
-      src: nginx.conf
+    ansible.builtin.template:
+      src: nginx.conf.j2
       dest: /etc/nginx/nginx.conf
+    notify: 
+      - Restart nginx
 
   - name: Restart nginx
     ansible.builtin.service:
