--- a/roles/frontend/tasks/vars/main.yaml
+++ b/roles/frontend/tasks/vars/main.yaml
@@ -1,4 +1,4 @@
-MONGODB_HOST: mongodb.deeps.sbs
-# CATALOGUE_HOST: catalogue.deeps.sbs
+CATALOGUE_HOST: catalogue.deeps.sbs
+# MONGODB_HOST: mongodb.deeps.sbs
 # USER_HOST: user.deeps.sbs
 # CART_HOST: cart.deeps.sbs
