--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,49 +1,1 @@
-  - name: Disabling default nginx
-    ansible.builtin.command: dnf module disable nginx -y
-    
-  - name: Enabling nginx:1.24
-    ansible.builtin.command: dnf module enable nginx:1.24 -y
-
-  - name: Installing nginx
-    ansible.builtin.dnf:
-      name: nginx
-      state: present
-
-  - name: Starting and enabling nginx
-    ansible.builtin.service:
-      name: nginx
-      state: started
-      enabled: true
-
-  - name: removing html directory
-    ansible.builtin.file:
-      path: /usr/share/nginx/html
-      state: absent 
-
-  - name: creating html directory
-    ansible.builtin.file:
-      path: /usr/share/nginx/html
-      state: directory
-  
-  - name: Download frontend code
-    ansible.builtin.get_url:
-      url: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
-      dest: /tmp/frontend.zip
-
-  - name: unzip frontend code
-    ansible.builtin.unarchive:
-      src: /tmp/frontend.zip
-      dest: /usr/share/nginx/html 
-      remote_src: yes
-  
-  - name: remove default nginx conf
-    ansible.builtin.file:
-      path: /etc/nginx/nginx.conf
-      state: absent
-  
-  - name: copy roboshop nginx conf
-    ansible.builtin.template:
-      src: nginx.conf.j2
-      dest: /etc/nginx/nginx.conf
-    notify: 
-      - Restart nginx
+CATALOGUE_HOST: catalogue.deeps.sbs
