--- a/roles/common/tasks/systemd.yaml
+++ b/roles/common/tasks/systemd.yaml
@@ -1,14 +1,14 @@
-  - name: copy catalogue service to system directory
+  - name: copy {{ component }} service to system directory
     ansible.builtin.template:
-      src: catalogue.service.j2
-      dest: /etc/systemd/system/catalogue.service
+      src: "{{ component }}.service.j2"
+      dest: "/etc/systemd/system/{{ component }}.service"
   
   - name: systemctl daemon-reload
     ansible.builtin.systemd_service:
       daemon_reload: yes
   
-  - name: Enable and start catalogue
+  - name: Enable and start {{ component }}
     ansible.builtin.service:
-      name: catalogue
+      name: "{{ component }}"
       state: restarted
       enabled: yes
