--- a/roles/common/tasks/maven.yaml
+++ b/roles/common/tasks/maven.yaml
@@ -14,14 +14,12 @@
     - cryptography
     - PyMySQL
 
-  
 - name: Install maven dependencies
-  ansible.builtin.command: mvn clean package 
-  args: 
+  ansible.builtin.command: mvn clean package
+  args:
     chdir: /app
 
-- name: rename jar file 
-  ansible.builtin.command: "mv target/{{ shipping }}-1.0.jar {{ shipping }}.jar"
-  args: 
+- name: rename jar file
+  ansible.builtin.command: "mv target/{{ component }}-1.0.jar {{ component }}.jar"
+  args:
     chdir: /app
-  
