--- a/roles/mysql/main.yaml
+++ b/roles/mysql/main.yaml
@@ -1,3 +1,8 @@
+- name: Add MySQL repo
+  ansible.builtin.yum:
+    name: https://dev.mysql.com/get/mysql80-community-release-el7-5.noarch.rpm
+    state: present
+
 - name: Installing mysql server
   ansible.builtin.dnf:
     name: mysql-server
