--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -19,6 +19,8 @@
     name: root
     host: localhost
     password: "RoboShop@1"
+    login_user: root
+    login_password: "RoboShop@1"
     login_unix_socket: /var/lib/mysql/mysql.sock
     check_implicit_admin: true
     state: present
