--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -14,13 +14,7 @@
     state: started
     enabled: yes
 
-- name: Set MySQL root password (first-time setup)
-  community.mysql.mysql_user:
-    name: root
-    host: localhost
-    password: "RoboShop@1"
-    login_user: root
-    login_password: "RoboShop@1"
-    login_unix_socket: /var/lib/mysql/mysql.sock
-    check_implicit_admin: true
-    state: present
+- name: Mysql pwdsetup and access to shipping service
+  include_role:
+    name: common
+    tasks_from: sqlpwdsetup.yaml
