--- a/roles/common/tasks/sqlpwdsetup.yaml
+++ b/roles/common/tasks/sqlpwdsetup.yaml
@@ -1,19 +1,20 @@
 - name: Set MySQL root password (first-time setup)
   community.mysql.mysql_user:
     name: "{{ SQL_USERNAME }}"
-    host: localhost
+    host: "localhost"
     password: "{{ SQL_PASSWORD }}"
     login_unix_socket: /var/lib/mysql/mysql.sock
     check_implicit_admin: true
     state: present
     plugin: mysql_native_password
 
-- name: Allow root user access from any host
+- name: Allow root user access from any host (%)
   community.mysql.mysql_user:
     name: "{{ SQL_USERNAME }}"
     host: "%"
     password: "{{ SQL_PASSWORD }}"
     priv: "*.*:ALL,GRANT"
+    plugin: mysql_native_password
     state: present
     login_user: "{{ SQL_USERNAME }}"
     login_password: "{{ SQL_PASSWORD }}"
