trying to fix shipping issue

--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -11,11 +11,12 @@
 - name: import data
   community.mysql.mysql_db:
     name: all
-    login_user: root
-    login_password: RoboShop@1
-    login_host: mysql.deeps.sbs
+    login_user: "{{ MYSQL_ROOT_USER }}"
+    login_password: "{{ MYSQL_ROOT_PASSWORD }}"
+    login_host: "{{ MYSQL_HOST }}"
     state: import
     target: "{{ item }}"
+    remote_src: yes
   loop:
     - /app/db/schema.sql
     - /app/db/app-user.sql
