--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -1,12 +1,12 @@
 - name: App setup
   include_role:
     name: common
-    tasks_from: app-setup.yaml
+    tasks_from: app-setup
 
 - name: Maven setup
   include_role:
     name: common
-    tasks_from: maven.yaml
+    tasks_from: maven-setup
 
 - name: import data
   community.mysql.mysql_db:
@@ -24,4 +24,4 @@
 - name: Systemd setup
   include_role:
     name: common
-    tasks_from: systemd.yaml
+    tasks_from: systemd
