--- a/roles/user/tasks/main.yaml
+++ b/roles/user/tasks/main.yaml
@@ -2,13 +2,13 @@
   include_role:
     name: common
     tasks_from: app-setup
-  
+
 - name: nodejs setup
   include_role:
     name: common
-    tasks_from: nodejs
+    tasks_from: nodejs-setup
 
 - name: systemd setup
   include_role:
     name: common
-    tasks_from: systemd.yaml
+    tasks_from: systemd
