--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -12,11 +12,12 @@
   ansible.builtin.copy:
     src: "{{ item }}"
     dest: "/tmp/"
+    remote_src: yes
   loop:
     - files/schema.sql
     - files/app-user.sql
     - files/master-data.sql
-  delegate_to: mysql.deeps.sbs
+  delegate_to: "{{ MYSQL_HOST }}"
 
 - name: Import DB files
   community.mysql.mysql_db:
@@ -30,7 +31,7 @@
     - schema.sql
     - app-user.sql
     - master-data.sql
-  delegate_to: mysql.deeps.sbs
+  delegate_to: "{{ MYSQL_HOST }}"
 
 - name: Systemd setup
   include_role:
