--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -8,15 +8,18 @@
     name: common
     tasks_from: maven-setup
 
-- name: Import SQL files from shipping to MySQL server
-  ansible.builtin.shell: >
-    mysql -h {{ MYSQL_HOST }} -u{{ MYSQL_ROOT_USER }} -p{{ MYSQL_ROOT_PASSWORD }} < {{ item }}
-  args:
-    chdir: /app/db
+- name: import data
+  community.mysql.mysql_db:
+    name: all
+    login_user: "{{ MYSQL_ROOT_USER }}"
+    login_password: "{{ MYSQL_ROOT_PASSWORD }}"
+    login_host: "{{ MYSQL_HOST }}"
+    state: import
+    target: "{{ item }}"
   loop:
-    - schema.sql
-    - app-user.sql
-    - master-data.sql
+    - /app/db/schema.sql
+    - /app/db/app-user.sql
+    - /app/db/master-data.sql
   tags: one_time
 
 - name: Systemd setup
