--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -1,36 +1,36 @@
-  - name: app setup
-    include_role:
-      name: common
-      tasks_from: app-setup
-  
-  - name: nodejs setup
-    include_role:
-      name: common
-      tasks_from: nodejs
-      
-  - name: copy mongodb repo
-    ansible.builtin.copy:
-     src: mongo.repo
-     dest: /etc/yum.repos.d/mongo.repo
+- name: app setup
+  include_role:
+    name: common
+    tasks_from: app-setup
 
-  - name: Install mongodb client
-    ansible.builtin.dnf:
-      name: mongodb-mongosh
-      state: present
+- name: nodejs setup
+  include_role:
+    name: common
+    tasks_from: nodejs-setup
 
-  - name: check products loaded or not
-    ansible.builtin.command: mongosh --host mongodb.deeps.sbs --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
-    register: catalogue_output
-  
-  - name: print catalogue output
-    ansible.builtin.debug:
-      msg: "{{ catalogue_output }}"
+- name: copy mongodb repo
+  ansible.builtin.copy:
+    src: mongo.repo
+    dest: /etc/yum.repos.d/mongo.repo
 
-  - name: Load product data
-    ansible.builtin.shell: mongosh --host mongodb.deeps.sbs < /app/db/master-data.js
-    when: catalogue_output.stdout | int < 0
+- name: Install mongodb client
+  ansible.builtin.dnf:
+    name: mongodb-mongosh
+    state: present
 
-  - name: systemd setup
-    include_role:
-      name: common
-      tasks_from: systemd.yaml
+- name: check products loaded or not
+  ansible.builtin.command: mongosh --host mongodb.deeps.sbs --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
+  register: catalogue_output
+
+- name: print catalogue output
+  ansible.builtin.debug:
+    msg: "{{ catalogue_output }}"
+
+- name: Load product data
+  ansible.builtin.shell: mongosh --host mongodb.deeps.sbs < /app/db/master-data.js
+  when: catalogue_output.stdout | int < 0
+
+- name: systemd setup
+  include_role:
+    name: common
+    tasks_from: systemd.yaml
