--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -21,16 +21,24 @@
 - name: check products loaded or not
   ansible.builtin.command: mongosh --host mongodb.deeps.sbs --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
+  ignore_errors: true
 
 - name: print catalogue output
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
+  ignore_errors: true
 
 - name: Load product data
   ansible.builtin.shell: mongosh --host mongodb.deeps.sbs < /app/db/master-data.js
   when: catalogue_output.stdout | int < 0
+  ignore_errors: true
 
 - name: systemd setup
   include_role:
     name: common
     tasks_from: systemd
+
+- name: app setup
+  include_role:
+    name: common
+    tasks_from: deployment
