--- a/roles/cart/vars/main.yaml
+++ b/roles/cart/vars/main.yaml
@@ -1,2 +1,2 @@
-REDIS_HOST: redis.deeps.sbs
-CATALOGUE_HOST: catalogue.deeps.sbs
+REDIS_HOST: redis-{{ env }}.deeps.sbs
+CATALOGUE_HOST: catalogue.backend-{{ dev }}.deeps.sbs
