modified env to dev

--- a/roles/cart/vars/main.yaml
+++ b/roles/cart/vars/main.yaml
@@ -1,2 +1,2 @@
 REDIS_HOST: redis-{{ env }}.deeps.sbs
-CATALOGUE_HOST: catalogue.backend-{{ dev }}.deeps.sbs
+CATALOGUE_HOST: catalogue.backend-{{ env }}.deeps.sbs
